examples/effects/m8_spawn_row_mismatch.err.expected
error: type mismatch in op call Spawn.spawn
  --> examples/effects/m8_spawn_row_mismatch.kai:18:22
     |
  18 |   let f = Spawn.spawn(42)
     |                      ^
  = note: expected: (() -> ?t1) -> Fiber[?t1]
  = note: found:    (Int) -> ?t2
