examples/effects/m8_spawn_row_mismatch.kai
# Issue #72 — negative fixture for per-op ROW generics on Spawn.
#
# Before this lane, `Spawn.spawn`'s thunk parameter was typed as
# `Nothing` (TyAny), so passing a non-thunk argument silently
# went through (and would crash at runtime when the dispatcher
# tried to invoke a non-callable). After per-op row generics
# land, the op's thunk parameter is `() -> T / e`, and the typer
# rejects a bare `Int` with a function-shape mismatch:
#
#   expected: (() -> ?t / ?e) -> Fiber[?t]
#   found:    (Int) -> ?t
#
# This pins the row-generic surface as the canonical entry point
# (per Doc B §`Spawn`) — `fiber_spawn` is no longer the only path
# that gets the thunk-shape check.

fn main() : Int / Spawn = {
  let f = Spawn.spawn(42)
  Spawn.await(f)
}
